--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.5",
     "next": "14.2.7",
+    "node-vibrant": "^3.2.1-alpha.1",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.5"
